# PlayerApi

./: .gitignore  Cargo.toml
src/: api_error.rs  avatar.rs  extra.rs  favorite.rs  get.rs  home.rs  info.rs  link.rs  login.rs  main.rs  search.rs  watching.rs
src/entities/: avatar.rs  favorite.rs  home.rs  login.rs  mod.rs  prelude.rs  session.rs  userinfo.rs  watching.rs
src/migrator/: create_avatar_table.rs  create_favorite_table.rs  create_home_table.rs  create_login_table.rs  create_session_table.rs  create_userinfo_table.rs  create_watching_table.rs  mod.rs
