[package]
name = "playerapi"
version = "1.2.0"
edition = "2021"
authors = ["autergame"]

[dependencies]
url = "2.5.2"
hex = "0.4.3"
rand = "0.8.5"
tokio = "1.38.0"
chrono = "0.4.38"
reqwest = "0.12.5"
indicium = "0.6.2"
itertools = "0.13.0"
urlencoding = "2.1.3"
ordered-float = "4.2.0"

actix-web = "4.8.0"
actix-cors = "0.7.0"
actix-web-httpauth = "0.8.2"

#utoipa = { version = "4.1.0", features = ["actix_extras"] }
#utoipa-swagger-ui = { version = "5.0.0", features = ["actix-web"] }

sea-orm = { version = "0.12.15", features = [
	"sqlx-sqlite",
	"runtime-tokio-rustls",
] }
sea-orm-migration = "0.12.15"

serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.117", features = ["arbitrary_precision"] }
serde_urlencoded = "0.7.1"

[profile.release]
opt-level = 3
strip = true
debug = false
incremental = false
overflow-checks = false
debug-assertions = false